--- a/views/resume.ejs
+++ b/views/resume.ejs
@@ -3,7 +3,7 @@
 <section id="root">
         <div id="page">
             <!-- <%= user %> -->
-            <hr class="resume-progress margin10" style="height: 7px; background: linear-gradient(to right, #7dc57c 0, #7dc57c 16.6%, #1295c9 16.6%, #1295c9 33.2%, #815874 33.2%, #815874 49.8%, #fada58 49.8%, #fada58 66.4%, #e15554 66.4%, #e15554 83%, #ff8000 83%, #ff8000 99.6%);">
+            <hr class="resume-progress margin10">
             <section id="info-social-links">
             <div id="basic-info" class="margin10">
                 <p id="name" ><%= user.name %></p>
